--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
-version = '1.18.2-3.2.1'
+version = '1.18.2-3.3.0-bin'
 group = 'hualong.ticc'
 archivesBaseName = 'TiCC'
 
